[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/pipes/pipe.png" type="Texture" id=1]
[ext_resource path="res://scripts/Pipes.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 56 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 28 )

[node name="Pipes" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.35899e-05, 2.04879 )
rotation = -3.14159
scale = Vector2( 1.6, 2.76966 )

[node name="Pipe_up" type="Area2D" parent="."]
position = Vector2( 0, -82 )
rotation = -3.14159
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Pipe_up"]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipe_up"]
shape = SubResource( 1 )

[node name="Pipe_down" type="Area2D" parent="."]
position = Vector2( 0, 86 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Pipe_down"]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipe_down"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Pipe_up" to="." method="_on_Pipe_up_body_entered"]
[connection signal="body_entered" from="Pipe_down" to="." method="_on_Pipe_down_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
